# teka3003miniprojekti

./: .gitignore  .pylintrc  README.md  example.db.json  log.html  output.xml  pyproject.toml  report.html  retro.md
.github/workflows/: main.yml
resources/: app_library.py  citation_app_library.py  test.db
src/: AppLibrary.py  app.py  main.py  suorita.py
src/Citation/: __init__.py  citation.py
src/Database/: __init__.py  memory_database.py
src/Syote/: Entry.py  Lomake.py  Suorita.py
src/Syöte/: Entry.py  Syöte.py  Testi.py  tyypit.py
src/citation/: __init__.py  citation.py
src/citation_app/: __init__.py  citation_app.py
src/database/: __init__.py  database_handler.py  memory_database.py
src/filter_builder/: __init__.py  builder.py
src/lomake/: Entry.py  Testi.py  __init__.py  lomake.py  suorita.py
tests/: test_UI.py  test_citation.py  test_citation_app.py  test_entry.py  test_filter.py  test_handle_database.py  test_lomake.py  test_memory_database.py  test_suorita.py
tests/robot/: app_filter_tests.robot  app_filter_tests_bibtex.robot  citation_tests.robot  hae_tagin_perusteella.robot  synchronize_databases_test.robot
