[tool.poetry]
name = "miniprojekti"
version = "0.1.0"
description = "Ohtu miniprojekti"
authors = ["Mich-FI <mikaelgaram@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"


[tool.poetry.group.dev.dependencies]
pylint = "2.17.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.1,<10.0.0)",
    "coverage (>=7.12.0,<8.0.0)",
    "pylint (>=4.0.3,<5.0.0)",
    "black (>=25.11.0,<26.0.0)",
    "robotframework (>=7.3.2,<8.0.0)",
]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]

